--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.47.0"
+    "react-responsive-carousel": "^3.2.22",
+    "sass": "^1.47.0",
+    "scrollreveal": "^4.0.9"
   },
   "devDependencies": {
     "eslint": "8.4.1",
