--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "next": "12.0.7",
     "next-seo": "^4.28.1",
